src/objects/FieloCMS__Plugin__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMS__DesktopCSS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s style sheet resources for Desktop devices</description>
        <label>Desktop&apos;s CSS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__DesktopJS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Desktop devices</description>
        <label>Desktop&apos;s Javacsript URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__MobileCSS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Mobile devices</description>
        <label>Mobile&apos;s CSS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Mobile_s_JS_URLs__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Mobile devices</description>
        <label>Mobile&apos;s JS URLs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__ResourceId__c</fullName>
        <description>The id of the static resource with the Plugin&apos;s description.</description>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__TabletCSS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s style sheet resources for Tablet devices</description>
        <label>Tablet&apos;s CSS URLs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__TabletJS__c</fullName>
        <description>This field have a list of the url of implementer&apos;s javascript resources for Tablet devices</description>
        <label>Tablet&apos;s Javacsript URLs</label>
        <type>TextArea</type>
    </fields>
    <label>Plugin</label>
    <nameField>
        <label>Plugin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plugin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>